--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 ext {
     javaVersion = 17
-    jakartaAnnotationApiVersion = '3.0.0'
+    spotbugsAnnotationsVersion = '4.9.8'
     ST4Version = '4.3.4'
     jmhVersion = '1.37'
     agronaVersion = '2.3.0'
+    junitVersion = '5.14.0'
 }
 
 subprojects {
@@ -19,5 +20,9 @@ subprojects {
 
     repositories {
         mavenCentral()
+    }
+
+    test {
+        useJUnitPlatform()
     }
 }
