add primitive object maps

--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -13,8 +13,8 @@ dependencies {
 
 // Ensure benchmarks compile after codegen
 tasks.named('compileJava') {
-    dependsOn project(':p-core-codegen').tasks.named('generatePrimitiveLists')
-    dependsOn project(':p-core-codegen').tasks.named('generatePrimitive2PrimitiveHashMaps')
+    dependsOn project(':p-core-codegen').tasks.named('generateLists')
+    dependsOn project(':p-core-codegen').tasks.named('generateHashMaps')
 }
 
 jmh {
