--- a/p-core/build.gradle
+++ b/p-core/build.gradle
@@ -13,6 +13,6 @@ dependencies {
 sourceSets.main.java.srcDir(project(':p-core-codegen').layout.buildDirectory.dir('generated-sources/java'))
 
 tasks.named('compileJava') {
-    dependsOn project(':p-core-codegen').tasks.named('generatePrimitiveLists')
-    dependsOn project(':p-core-codegen').tasks.named('generatePrimitive2PrimitiveHashMaps')
+    dependsOn project(':p-core-codegen').tasks.named('generateLists')
+    dependsOn project(':p-core-codegen').tasks.named('generateHashMaps')
 }
