--- a/p-core/build.gradle
+++ b/p-core/build.gradle
@@ -14,5 +14,6 @@ sourceSets.main.java.srcDir(project(':p-core-codegen').layout.buildDirectory.dir
 
 tasks.named('compileJava') {
     dependsOn project(':p-core-codegen').tasks.named('generateLists')
+    dependsOn project(':p-core-codegen').tasks.named('generateHashSets')
     dependsOn project(':p-core-codegen').tasks.named('generateHashMaps')
 }
