--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -16,6 +16,7 @@ tasks.named('compileJava') {
     dependsOn project(':p-core-codegen').tasks.named('generateLists')
     dependsOn project(':p-core-codegen').tasks.named('generateHashSets')
     dependsOn project(':p-core-codegen').tasks.named('generateHashMaps')
+    dependsOn project(':p-core-codegen').tasks.named('generateTreeMaps')
 }
 
 jmh {
