--- a/p-core/build.gradle
+++ b/p-core/build.gradle
@@ -16,5 +16,6 @@ tasks.named('compileJava') {
     dependsOn project(':p-core-codegen').tasks.named('generateLists')
     dependsOn project(':p-core-codegen').tasks.named('generateHashSets')
     dependsOn project(':p-core-codegen').tasks.named('generateHashMaps')
+    dependsOn project(':p-core-codegen').tasks.named('generateTreeSets')
     dependsOn project(':p-core-codegen').tasks.named('generateTreeMaps')
 }
